--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,28 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
+@layer base {
+  body {
+    @apply bg-gray-100;
+  }
 }
-
-* {
-  box-sizing: border-box;
+@layer components {
+  .intent {
+    @apply flex justify-between items-center p-4 bg-white text-black hover:shadow-xl cursor-pointer rounded-lg max-w-md mx-auto xl:mx-0;
+  }
+  .sidebarButton {
+    @apply p-3 dark:border-t border-gray-700  cursor-pointer opacity-80 hover:opacity-100;
+  }
+  .sidebarLink {
+    @apply text-[13px] font-medium text-blue-500 hover:underline cursor-pointer px-2.5;
+  }
+  .inputBtn {
+    @apply flex items-center space-x-2 font-medium cursor-pointer text-sm;
+  }
+  .postBtn {
+    @apply flex items-center justify-center space-x-2 
+    cursor-pointer hover:bg-black/10 dark:hover:bg-black/20 
+    w-full rounded py-2.5 transition ease-out font-medium;
+  }
 }
